--- a/po/da.po
+++ b/po/da.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-09 22:39+0800\n"
+"POT-Creation-Date: 2010-03-09 23:54+0800\n"
 "PO-Revision-Date: 2010-02-20 09:27+0000\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -445,6 +445,10 @@ msgstr "Vælg markeret program til at åbne filer med"
 msgid "Execute custom command line to open files"
 msgstr "Kør tilpasset kommandolinje for at åbne filer"
 
+#: ../src/gtk/fm-app-chooser-combo-box.c:185
+msgid "Customize"
+msgstr "Tilpas"
+
 #: ../src/gtk/fm-folder-view.c:468
 msgid "Name"
 msgstr "Navn"
@@ -497,9 +501,6 @@ msgstr "Er du sikker på, at du ønsker at tømme skraldespanden?"
 #, c-format
 msgid "The specified directory is not valid"
 msgstr "Den angivne mappe er ikke gyldig"
-
-#~ msgid "Customize"
-#~ msgstr "Tilpas"
 
 #~ msgid "It's not a valid directory"
 #~ msgstr "Det er ikke en gyldig mappe"
