--- a/po/fr.po
+++ b/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-09 22:39+0800\n"
+"POT-Creation-Date: 2010-03-09 23:54+0800\n"
 "PO-Revision-Date: 2010-02-19 11:00+0100\n"
 "Last-Translator: Emmanuel Trillaud <etrillaud@gmail.com>\n"
 "Language-Team: \n"
@@ -444,6 +444,10 @@ msgstr "Utiliser l'application sélectionnée les fichiers"
 msgid "Execute custom command line to open files"
 msgstr "Lancer une commande en ligne personnalisée pour ouvrir les fichiers"
 
+#: ../src/gtk/fm-app-chooser-combo-box.c:185
+msgid "Customize"
+msgstr "Personnaliser"
+
 #: ../src/gtk/fm-folder-view.c:468
 msgid "Name"
 msgstr "Nom"
@@ -496,9 +500,6 @@ msgstr "Êtes vous sûr de vouloir vider la corbeille ?"
 #, c-format
 msgid "The specified directory is not valid"
 msgstr "Le répertoire spécifié est invalide"
-
-#~ msgid "Customize"
-#~ msgstr "Personnaliser"
 
 #~ msgid "It's not a valid directory"
 #~ msgstr "Ce n'est pas un dossier valide"
