--- a/po/pt.po
+++ b/po/pt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-09 22:39+0800\n"
+"POT-Creation-Date: 2010-03-09 23:54+0800\n"
 "PO-Revision-Date: 2010-03-09 12:33-0000\n"
 "Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
 "Language-Team: \n"
@@ -441,6 +441,10 @@ msgstr "Usar a aplicação seleccionada para abrir ficheiros"
 msgid "Execute custom command line to open files"
 msgstr "Executar linha de comandos para abrir ficheiros"
 
+#: ../src/gtk/fm-app-chooser-combo-box.c:185
+msgid "Customize"
+msgstr "Personalizar"
+
 #: ../src/gtk/fm-folder-view.c:468
 msgid "Name"
 msgstr "Nome"
@@ -493,9 +497,6 @@ msgstr "Você tem certeza que deseja esvaziar o lixo?"
 #, c-format
 msgid "The specified directory is not valid"
 msgstr "O directório especificado é inválido"
-
-#~ msgid "Customize"
-#~ msgstr "Personalizar"
 
 #~ msgid "It's not a valid directory"
 #~ msgstr "Não é um directório válido"
