--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-09 22:39+0800\n"
+"POT-Creation-Date: 2010-03-09 23:54+0800\n"
 "PO-Revision-Date: 2010-01-31 12:27-0500\n"
 "Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
@@ -448,6 +448,10 @@ msgstr "Usar o aplicativo selecionado para abrir arquivos"
 msgid "Execute custom command line to open files"
 msgstr "Executar linhas de comando personalizadas para abrir arquivos"
 
+#: ../src/gtk/fm-app-chooser-combo-box.c:185
+msgid "Customize"
+msgstr "Personalizar"
+
 #: ../src/gtk/fm-folder-view.c:468
 msgid "Name"
 msgstr "Nome"
@@ -500,9 +504,6 @@ msgstr "Você tem certeza que deseja esvaziar a lixeira?"
 #, c-format
 msgid "The specified directory is not valid"
 msgstr "O diretório especificado não é válido"
-
-#~ msgid "Customize"
-#~ msgstr "Personalizar"
 
 #~ msgid "It's not a valid directory"
 #~ msgstr "Não é um diretório válido"
