added it translations

--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-09 23:54+0800\n"
-"PO-Revision-Date: 2010-02-26 20:59+0100\n"
+"PO-Revision-Date: 2010-03-09 18:41+0100\n"
 "Last-Translator: Andrea Florio <andrea@opensuse.org>\n"
 "Language-Team: it <it@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -57,9 +57,7 @@ msgstr "Applicazioni installate"
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "Set selected application as default action of this file type"
-msgstr ""
-"Imposta l'applicazione selezionata come azione predefinita per questo tipo "
-"di file"
+msgstr "Imposta l'applicazione selezionata come azione predefinita per questo tipo di file"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "_Browse"
@@ -185,9 +183,7 @@ msgstr "Operazioni ch il proprietario del file pò fare"
 
 #: ../data/ui/file-prop.glade.h:21
 msgid "Operations that users in the same group as the owner of the file can do"
-msgstr ""
-"Operazioni che possono fare gli utenti appartenenti allo stesso gruppo del "
-"il proprietario del file"
+msgstr "Operazioni che possono fare gli utenti appartenenti allo stesso gruppo del il proprietario del file"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Read and Write"
@@ -233,49 +229,43 @@ msgid "Preparing..."
 msgstr "In preparazione..."
 
 #: ../data/ui/preferred-apps.glade.h:1
-#, fuzzy
 msgid "<b>Mail client</b>"
-msgstr "<b>Tipo di file:</b>"
+msgstr "<b>Client Mail</b>"
 
 #: ../data/ui/preferred-apps.glade.h:2
 msgid "<b>Terminal Emulator</b>"
-msgstr ""
+msgstr "<b>Emulatore di Terminale"
 
 #: ../data/ui/preferred-apps.glade.h:3
-#, fuzzy
 msgid "<b>Web Browser</b>"
-msgstr "<b>Proprietario:</b>"
+msgstr "<b>Browser Web</b>"
 
 #: ../data/ui/preferred-apps.glade.h:4
-#, fuzzy
 msgid "Command line:"
-msgstr "Comando personalizzato"
+msgstr "Comando:"
 
 #: ../data/ui/preferred-apps.glade.h:5
 msgid "File Associations"
-msgstr ""
+msgstr "Associazioni dei File"
 
 #: ../data/ui/preferred-apps.glade.h:6
-#, fuzzy
 msgid "Preferred Applications"
-msgstr "Applicazioni"
+msgstr "Applicazioni Preferite"
 
 #: ../data/ui/preferred-apps.glade.h:7
-#, fuzzy
 msgid "System Applications"
-msgstr "Applicazioni installate"
+msgstr "Applicazioni di sistema"
 
 #: ../data/ui/preferred-apps.glade.h:8
-msgid ""
-"The preferred Mail Client will be used to compose emails when you click on E-"
-"mail addresses."
-msgstr ""
+msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
+msgstr "Il client Mail preferito sarà usato per comporre emali quando cliccherai un indirizzo E-mail"
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
-msgstr ""
+msgstr "Il Browser Web preferito sarà usato per aprire collegamenti ipertestuali."
 
-#: ../src/base/fm-utils.c:54 ../src/base/fm-utils.c:83
+#: ../src/base/fm-utils.c:54
+#: ../src/base/fm-utils.c:83
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
@@ -330,7 +320,8 @@ msgstr "Cestino"
 msgid "My Computer"
 msgstr "Il Mio Computer"
 
-#: ../src/base/fm-path.c:433 ../src/gtk/fm-places-view.c:467
+#: ../src/base/fm-path.c:433
+#: ../src/gtk/fm-places-view.c:467
 msgid "Applications"
 msgstr "Applicazioni"
 
@@ -371,8 +362,7 @@ msgid "Please enter a valid group name or numeric id."
 msgstr "Per favore digita un nome gruppo o id numerico valido."
 
 #: ../src/gtk/fm-file-properties.c:351
-msgid ""
-"Do you want to recursively apply these changes to all files and sub-folders?"
+msgid "Do you want to recursively apply these changes to all files and sub-folders?"
 msgstr "Vuoi applicare questi cambiamenti a tutti i file e le sotto-cartelle?"
 
 #: ../src/gtk/fm-file-properties.c:628
@@ -395,7 +385,8 @@ msgstr "Smona Volume"
 msgid "Eject Removable Media"
 msgstr "Espelli dispositivo removibile"
 
-#: ../src/gtk/fm-places-view.c:143 ../src/gtk/fm-places-view.c:750
+#: ../src/gtk/fm-places-view.c:143
+#: ../src/gtk/fm-places-view.c:750
 msgid "Rename Bookmark Item"
 msgstr "Rinomina il segnalibro"
 
@@ -419,7 +410,8 @@ msgstr "Scrivania"
 msgid "Enter a new name:"
 msgstr "Inserisci un nuovo nome:"
 
-#: ../src/gtk/fm-file-menu.c:79 ../src/gtk/fm-file-menu.c:80
+#: ../src/gtk/fm-file-menu.c:79
+#: ../src/gtk/fm-file-menu.c:80
 msgid "Open With..."
 msgstr "Apri con..."
 
@@ -510,3 +502,4 @@ msgstr "La cartella specificata non è valida"
 #, fuzzy
 #~ msgid "The selection mode"
 #~ msgstr "Per favore, seleziona una cartella"
+
