* Completely rework FmJob system and has more precise control over error handling. * Completely rework the file progress dialog and support showing remaining time. * Showing errors during file operations by a much more usable way. * Better and more robust error handling for file operations. * Incompatible API changes: FmJob::error signal, fm_file_ops_job_run_with_progress(). * Fixes for some crashes. * Update TODO.

--- a/TODO
+++ b/TODO
@@ -1,12 +1,11 @@
 [High Priority]
 
 * File operations: move, copy, trashing, ...
-     Implement correct error handling.
-     Already works for FmDirListJob.
-     Confirm before deleting/trashing.
-     Rename/overwrite files appropriately when destination file
-     already exists. => done
+     Improve error handling.
      should provide multiple destination files for recovering trashed files.
+     Check available disk size prior to moving/copying.
+     Do mounting on demand.
+     Calculate speed and show remaining time.
 
 * Recover previously trashed files.
 
