--- a/po/ru.po
+++ b/po/ru.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lxfm\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-19 04:11+0000\n"
+"POT-Creation-Date: 2010-03-20 02:22+0800\n"
 "PO-Revision-Date: 2010-02-20 19:27+0400\n"
 "Last-Translator: boobaloo <koptev.oleg@gmail,com>\n"
 "Language-Team: gnome-cyr\n"
@@ -14,7 +14,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-Language: Russian\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Country: RUSSIAN FEDERATION\n"
@@ -269,8 +270,12 @@ msgid "System Applications"
 msgstr "Системные приложения"
 
 #: ../data/ui/preferred-apps.glade.h:8
-msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
-msgstr "Для написания писем при клике на адресе электронной почты будет использоваться предпочтительный почтовый клиент."
+msgid ""
+"The preferred Mail Client will be used to compose emails when you click on E-"
+"mail addresses."
+msgstr ""
+"Для написания писем при клике на адресе электронной почты будет "
+"использоваться предпочтительный почтовый клиент."
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
@@ -397,7 +402,8 @@ msgid "Please enter a valid group name or numeric id."
 msgstr "Введите правильное имя группы или цифровой идентификатор."
 
 #: ../src/gtk/fm-file-properties.c:351
-msgid "Do you want to recursively apply these changes to all files and sub-folders?"
+msgid ""
+"Do you want to recursively apply these changes to all files and sub-folders?"
 msgstr "Применить ко всем вложенным файлам и каталогам?"
 
 #: ../src/gtk/fm-file-properties.c:625
@@ -584,8 +590,11 @@ msgstr "Неправильно указан каталог"
 #~ msgid "Orientation"
 #~ msgstr "Ориентация"
 
-#~ msgid "How the text and icon of each item are positioned relative to each other"
-#~ msgstr "Определяет расположение значков и подписей каждого элемента по отношению друг к другу"
+#~ msgid ""
+#~ "How the text and icon of each item are positioned relative to each other"
+#~ msgstr ""
+#~ "Определяет расположение значков и подписей каждого элемента по отношению "
+#~ "друг к другу"
 
 #~ msgid "Row Spacing"
 #~ msgstr "Интервал между рядами"
