fix typo in string

--- a/po/el.po
+++ b/po/el.po
@@ -26,14 +26,14 @@ msgstr "<b>Τύπος αρχείου προς άνοιγμα:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f</b>: Represents a single file name\n"
+"  <b>%f:</b> Represents a single file name\n"
 "  <b>%F:</b> Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Αυτοί οι ειδικοί κωδικοί μπορούν να χρησιμοποιηθούν στη γραμμή εντολών:</"
 "b>\n"
-" <b>%f</b>: Αντιπροσωπεύει ένα όνομα αρχείου\n"
+" <b>%f:</b> Αντιπροσωπεύει ένα όνομα αρχείου\n"
 " <b>%F</b>: Αντιπροσωπεύει πολλαπλά ονόματα αρχείων\n"
 " <b>%u</b>: Αντιπροσωπεύει ένα ενιαίο URI του αρχείου\n"
 " <b>%U</b>: Αντιπροσωπεύει πολλαπλά URIs"
