--- a/po/it.po
+++ b/po/it.po
@@ -28,13 +28,13 @@ msgstr "<b>Tipo di file da aprire:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f</b>: Represents a single file name\n"
+"  <b>%f:</b> Represents a single file name\n"
 "  <b>%F:</b> Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Questi codici speciali possono essere usati nella linea di comando:</b>\n"
-"  <b>%f</b>: Rappresenta un solo nome file\n"
+"  <b>%f:</b> Rappresenta un solo nome file\n"
 "  <b>%F:</b> Rappresenta nomi di file multipli\n"
 "  <b>%u</b>: Rappresenta l'URI di un solo file\n"
 "  <b>%U</b>: Rappresenta l'URI di file multipli"
