--- a/po/he.po
+++ b/po/he.po
@@ -27,13 +27,13 @@ msgstr "<b>סוג הקובץ לפתיחה:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f</b>: Represents a single file name\n"
+"  <b>%f:</b> Represents a single file name\n"
 "  <b>%F:</b> Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>ניתן להשתמש בקודים מיוחדים אלה בשורת הפקודה:</b>\n"
-"  <b>%f</b>: לייצוג שם קובץ בודד\n"
+"  <b>%f:</b> לייצוג שם קובץ בודד\n"
 "  <b>%F:</b> לייצוג מספר שמות קבצים\n"
 "  <b>%u</b>: לייצוג כתובת אחידה לקובץ\n"
 "  <b>%U</b>: לייצוג מספר כתובות אחידות"
