--- a/po/pt.po
+++ b/po/pt.po
@@ -30,13 +30,13 @@ msgstr "<b>Tipo de Ficheiro a Abrir:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f</b>: Represents a single file name\n"
+"  <b>%f:</b> Represents a single file name\n"
 "  <b>%F:</b> Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Estes códigos especiais podem ser usados na linha de comandos:</b>\n"
-"  <b>%f</b>: Representa o nome  do ficheiro\n"
+"  <b>%f:</b> Representa o nome  do ficheiro\n"
 "  <b>%F:</b> Representa nome de vários ficheiros\n"
 "  <b>%u</b>: Representa a URI do ficheiro\n"
 "  <b>%U</b>: Representa várias URIs"
