fix previous commit, correction was not in sync with other strings

--- a/po/cs.po
+++ b/po/cs.po
@@ -28,14 +28,14 @@ msgstr " <b>Typ souboru k otevření:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f:</b> Represents a single file name\n"
-"  <b>%F:</b> Represents multiple file names\n"
+"  <b>%f</b>: Represents a single file name\n"
+"  <b>%F</b>: Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>V příkazech mohou být použity tyto speciální kódy:</b>\n"
-"  <b>%f:</b> Představuje jeden soubor\n"
-"  <b>%F:</b> Představuje více souborů\n"
+"  <b>%f</b>: Představuje jeden soubor\n"
+"  <b>%F</b>: Představuje více souborů\n"
 "  <b>%u</b>: Představuje jednu URI adresu\n"
 "  <b>%U</b>: Představuje více URI adres"
 
