--- a/po/de.po
+++ b/po/de.po
@@ -29,13 +29,13 @@ msgstr "<b>Dateityp zum Öffnen:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f:</b> Represents a single file name\n"
-"  <b>%F:</b> Represents multiple file names\n"
+"  <b>%f</b>: Represents a single file name\n"
+"  <b>%F</b>: Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Folgende Parameter können in der Befehlszeile genutzt werden:</b>\n"
-"  <b>%f:</b> Name einer einzelnen Datei\n"
+"  <b>%f</b>: Name einer einzelnen Datei\n"
 "  <b>%F</b>: Namen mehrerer Dateien\n"
 "  <b>%u</b>: URI einer einzelnen Datei\n"
 "  <b>%U</b>: URIs mehrerer Dateien"
