--- a/po/es.po
+++ b/po/es.po
@@ -28,13 +28,13 @@ msgstr "<b>Tipo de archivo a abrirse:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f:</b> Represents a single file name\n"
-"  <b>%F:</b> Represents multiple file names\n"
+"  <b>%f</b>: Represents a single file name\n"
+"  <b>%F</b>: Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>En la línea de comandos pueden utilizarse estos códigos especiales:</b>\n"
-" <b>%f:</b> Representa el nombre de un solo archivo\n"
+" <b>%f</b>: Representa el nombre de un solo archivo\n"
 " <b>%F</b>: Representa múltiples nombres de archivos\n"
 " <b>%u</b>: Representa un solo URI del archivo\n"
 " <b>%U</b>: Representa múltiples URIs"
