--- a/po/fr.po
+++ b/po/fr.po
@@ -28,14 +28,14 @@ msgstr "<b>Type de fichier à ouvrir :</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f:</b> Represents a single file name\n"
-"  <b>%F:</b> Represents multiple file names\n"
+"  <b>%f</b>: Represents a single file name\n"
+"  <b>%F</b>: Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Ces codes spéciaux peuvent être utilisé en ligne de commande:</b>\n"
-"  <b>%f:</b> Représente un unique nom de fichier\n"
-"  <b>%F:</b> Représente plusieurs noms de fichier\n"
+"  <b>%f</b>: Représente un unique nom de fichier\n"
+"  <b>%F</b>: Représente plusieurs noms de fichier\n"
 "  <b>%u</b>: Représente une unique URI d'un fichier\n"
 "  <b>%U</b>: Représente plusieurs URI"
 
