--- a/po/lt.po
+++ b/po/lt.po
@@ -25,14 +25,14 @@ msgstr "<b>Atidaromo failo tipas:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f:</b> Represents a single file name\n"
-"  <b>%F:</b> Represents multiple file names\n"
+"  <b>%f</b>: Represents a single file name\n"
+"  <b>%F</b>: Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Komandinėje eilutėje gali būti naudojami šie specialūs kodai:</b>\n"
-" <b>%f:</b> reiškia vieno failo pavadinimą\n"
-" <b>%F:</b> reiškia kelių failų pavadinimus\n"
+" <b>%f</b>: reiškia vieno failo pavadinimą\n"
+" <b>%F</b>: reiškia kelių failų pavadinimus\n"
 " <b>%u</b>: reiškia vieną failo URI\n"
 " <b>%U</b>: reiškia kelis URIs"
 
