--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -28,14 +28,14 @@ msgstr "<b>Tipo de arquivo para ser aberto:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f:</b> Represents a single file name\n"
-"  <b>%F:</b> Represents multiple file names\n"
+"  <b>%f</b>: Represents a single file name\n"
+"  <b>%F</b>: Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Estes cÃÂ³digos especiais podem ser usados na linha de comando:</b>\n"
-"  <b>%f:</b> Representa um nome de arquivo ÃÂºnico\n"
-"  <b>%F:</b> Representa vÃÂ¡rios nomes de arquivos\n"
+"  <b>%f</b>: Representa um nome de arquivo ÃÂºnico\n"
+"  <b>%F</b>: Representa vÃÂ¡rios nomes de arquivos\n"
 "  <b>%u</b>: Representa um ÃÂºnico URI de um arquivo\n"
 "  <b>%U</b>: Representa vÃÂ¡rios URIs"
 
