--- a/po/ru.po
+++ b/po/ru.po
@@ -33,14 +33,14 @@ msgstr "<b>Тип открываемого файла:<b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f:</b> Represents a single file name\n"
-"  <b>%F:</b> Represents multiple file names\n"
+"  <b>%f</b>: Represents a single file name\n"
+"  <b>%F</b>: Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Специальные параметры командной строки:</b>\n"
-"  <b>%f:</b> Представляет имя одиночного файла\n"
-"  <b>%F:</b> Представляет имена нескольких файлов\n"
+"  <b>%f</b>: Представляет имя одиночного файла\n"
+"  <b>%F</b>: Представляет имена нескольких файлов\n"
 "  <b>%u</b>: Представляет путь одиночного файла\n"
 "  <b>%U</b>: Представляет пути нескольких файлов"
 
