--- a/po/uk.po
+++ b/po/uk.po
@@ -30,14 +30,14 @@ msgstr "<b>Тип файлу для відкриття:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f:</b> Represents a single file name\n"
-"  <b>%F:</b> Represents multiple file names\n"
+"  <b>%f</b>: Represents a single file name\n"
+"  <b>%F</b>: Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Ці спеціальні коди можна використати в командній стрічці:</b>\n"
-" <b>%f:</b> означає назву одного файлу\n"
-" <b>%F:</b> означає назву багатьох файлів\n"
+" <b>%f</b>: означає назву одного файлу\n"
+" <b>%F</b>: означає назву багатьох файлів\n"
 " <b>%u</b>: означає URI файлу\n"
 " <b>%U</b>: означає багато URI"
 
