--- a/po/da.po
+++ b/po/da.po
@@ -28,13 +28,13 @@ msgstr "<b>Filtype der skal åbnes:</b>"
 #, no-c-format
 msgid ""
 "<b>These special codes can be used in the command line:</b>\n"
-"  <b>%f:</b> Represents a single file name\n"
-"  <b>%F:</b> Represents multiple file names\n"
+"  <b>%f</b>: Represents a single file name\n"
+"  <b>%F</b>: Represents multiple file names\n"
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Disse specielle koder kan bruges på kommandolinjen:</b>\n"
-"  <b>%f:</b> Repræsenterer et enkelt filnavn\n"
+"  <b>%f</b>: Repræsenterer et enkelt filnavn\n"
 "  <b>%F</b>: Repræsenterer flere filnavne\n"
 "  <b>%u</b>: Repræsenterer en enkelt URI i filen\n"
 "  <b>%U</b>: Repræsenterer flere URI'er"
